# lwtnn

./: .#README.md  .gitignore  .pre-commit-config.yaml  .travis.yml  .zenodo.json  CITATION.cff  CMakeLists.txt  CONTRIBUING.md  CONTRIBUTING.md  LICENCE  README.md  makefile  test-nn.sh
.github/workflows/: ci.yml  lint.yml
cmake/: FindEigen.cmake  lwtnnConfig-version.cmake.in  lwtnnConfig.cmake
converters/: agile2json.py  julian2json.py  keras2json.py  keras_layer_converters.py  keras_layer_converters_common.py  keras_v1_layer_converters.py  keras_v2_layer_converters.py  kerasfunc2json.py  sequential2graph.py  sklearn2json.py  variables_ntuple2athena.py
data/: test-nn.json  test-nn.yml
include/: InputPreprocessor.hh  LWTagger.hh  LayerConfig.hh  LightweightNeuralNetwork.hh  NNLayerConfig.hh  NanReplacer.hh  Streamers.hh  Tagger.hh  lightweight_nn_streamers.hh  parse_json.hh  tools.hh
include/lwtnn/: Exceptions.hh  Graph.hh  Graph.txx  InputOrder.hh  InputPreprocessor.hh  InputPreprocessor.txx  LightweightGraph.hh  LightweightNeuralNetwork.hh  LightweightNeuralNetworkT.hh  LightweightNeuralNetworkT.txx  LightweightRNN.hh  NNLayerConfig.hh  Source.hh  Stack.hh  Stack.txx  lightweight_network_config.hh  lightweight_nn_streamers.hh  parse_json.hh
include/lwtnn/generic/: .Graph.txx.kate-swp  FastGraph.hh  FastGraph.tcc  FastInputPreprocessor.hh  FastInputPreprocessor.tcc  Graph.hh  Graph.tcc  Graph.txx  InputPreprocessor.hh  InputPreprocessor.tcc  InputPreprocessor.txx  LightweightGraph.hh  LightweightGraph.tcc  LightweightGraph.txx  LightweightNeuralNetwork.hh  LightweightNeuralNetwork.tcc  LightweightNeuralNetwork.txx  Source.hh  Stack.hh  Stack.tcc  Stack.txx  eigen_typedefs.hh
scripts/: CustomLayers.py  lwtnn-build-dummy-inputs.py  lwtnn-config  lwtnn-count-parameters.py  lwtnn-split-keras-network.py  lwtnn-test-keras-arbitrary-net.py  lwtnn-test-keras-functional.py  lwtnn-test-keras-rnn.py  lwtnn-testpattern-generator.py
src/: Exceptions.cxx  FastGraph.cxx  FastInputPreprocessor.cxx  Graph.cxx  InputPreprocessor.cxx  LWTagger.cxx  LightweightGraph.cxx  LightweightNeuralNetwork.cxx  LightweightRNN.cxx  NanReplacer.cxx  Stack.cxx  Streamers.cxx  lightweight_nn_streamers.cxx  lwtag-hltest.cxx  lwtag-main.cxx  lwtag-test-defaults.cxx  lwtag-test-full.cxx  lwtag-test-full_default.cxx  lwtag-test-hlwrapper.cxx  lwtag-test-stack.cxx  lwtag-testparser.cxx  lwtag.cxx  lwtnn-benchmark-rnn.cxx  lwtnn-dump-config.cxx  lwtnn-test-arbitrary-graph.cxx  lwtnn-test-arbitrary-net.cxx  lwtnn-test-defaults.cxx  lwtnn-test-fastgraph.cxx  lwtnn-test-full.cxx  lwtnn-test-graph.cxx  lwtnn-test-highway.cxx  lwtnn-test-hlwrapper.cxx  lwtnn-test-lightweight-graph.cxx  lwtnn-test-rnn.cxx  lwtnn-test-stack.cxx  parse_json.cxx  test_utilities.cxx  test_utilities.hh  tools.cxx
tests/: build-cmake.sh  check-conversion.sh  check-version-number.sh  convert  reg-test.py  requirements.txt  test-Add.sh  test-BatchNorm.sh  test-DL1.sh  test-GRU.sh  test-LSTM.sh  test-SimpleRNN.sh  test-agilepack.sh  test-conv1d_functional.sh  test-dense_dropout_functional.sh  test-elu.sh  test-gru-sequence.sh  test-highway.sh  test-ipmp.sh  test-leaky-relu.sh  test-lstm_functional.sh  test-merge-graph.sh  test-nn-streamers.cxx  test-runner.sh  test-time-distributed-dense.sh  test-unsplit-model.sh  test_dense_dropout_functional.sh  travis-build-cmake.sh
tests/data/: BatchNorm-out.json  GRU-out.json  add_dense_functional-out.json  agile-in.yml  agile-out.json  conv1d_functional-out.json  dense_dropout_functional-out.json  dense_dropout_functional.json  highway-out.json  ipmp-out.json  lstm_functional-out.json  merge-graph-out.json  simplernn_functional-out.json
tests/data/converter_data/: basic_lstm_network_output.json
tests/install/: CMakeLists.txt  test-lwtnn.cxx
